[package]
name = "aflak_imgui"
version = "0.20.1"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>",
           "Malik Olivier Boussejra <malik@boussejra.com>",
           "imgui-rs contributors"]
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/malikolivier/imgui-rs"
repository = "https://github.com/malikolivier/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.markdown"

[dependencies]
aflak_imgui-sys = { version = "0.20.1", path = "imgui-sys" }

[dev-dependencies]
glium = { version = "0.22", default-features = true }
aflak_imgui-glium-renderer = { path = "imgui-glium-renderer", version = "0.20.1" }

[workspace]
members = ["imgui-examples", "imgui-sys", "imgui-gfx-renderer", "imgui-glium-renderer", "imgui-glutin-support"]
