[package]
name = "imgui-examples"
version = "0.0.19-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
gfx = "0.17"
gfx_window_glutin = "0.22"
glium = { version = "0.20", default-features = true }
glutin = "0.14"
aflak_imgui = { version = "0.18.1", path = "../" }
imgui-gfx-renderer = { version = "0.0.19-pre", path = "../imgui-gfx-renderer" }
aflak_imgui-glium-renderer = { version = "0.18.1", path = "../imgui-glium-renderer" }
aflak_imgui-sys = { version = "0.18.1", path = "../imgui-sys", features = ["gfx", "glium"] }
