[package]
name = "imgui-glium-examples"
version = "0.0.22-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples using Glium backend"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
glium = { git = "https://github.com/malikolivier/glium", rev = "6382a4e776ead7be167ccc9aff2698996a806e28" }
imgui = { version = "0.0.22-pre", path = "../" }
imgui-glium-renderer = { version = "0.0.22-pre", path = "../imgui-glium-renderer" }
imgui-glutin-support = { version = "0.0.22-pre", path = "../imgui-glutin-support" }
image = "0.20"
