[package]
name = "imgui-glium-examples"
version = "0.0.22-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples using Glium backend"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
glium = { git = "https://github.com/malikolivier/glium", rev = "d6ac886143198014c6dd254bcfb23422a0df6307" }
imgui = { version = "0.0.22-pre", path = "../" }
imgui-glium-renderer = { version = "0.0.22-pre", path = "../imgui-glium-renderer" }
imgui-glutin-support = { version = "0.0.22-pre", path = "../imgui-glutin-support" }
image = "0.20"
