[package]
name = "imgui-glium-renderer"
version = "0.0.22-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
glium = { git = "https://github.com/malikolivier/glium", rev = "d6ac886143198014c6dd254bcfb23422a0df6307" }
imgui = { version = "0.0.22-pre", path = "../" }
imgui-sys = { version = "0.0.22-pre", path = "../imgui-sys", features = ["glium"] }
