[package]
name = "imgui-sys"
version = "0.0.22-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "Raw FFI bindings to dear imgui"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
libc = "0.2"
bitflags = "1.0"
glium = { git = "https://github.com/malikolivier/glium", rev = "f36ceca3864171e8217dc60085750e2af9beec82", default-features = false, optional = true }
gfx = { version = "0.17", optional = true }

[build-dependencies]
cc = "1.0"
